--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <Header>
     <h1>Travel</h1>
 </Header>
+
+<nav>
+    <a href="/pets.html/">pets</a>
+    <a href="/recipes.html/">recipes</a>
+</nav>
+
 <body>
     <main>
         <div>
