Testing image paths

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>
             <h2>Barcelona, Spain</h2>
 
-            <img src="/images/barcelona.jpeg" width="400"
+            <img src="images/barcelona.jpeg" width="400"
             alt="barcelona image">
 
             <p>Barcelona, is a beautiful city on the Northeastern coast of Spain that is the byproduct of a rich and artistic history with modern infrastructure. One of the main attractions of the city is its gorgeous architecture, often the work of world renowned architects such as Antoni Gaudi. Some of the most notable works are the modern Basilica of La Sagrada Familia, and the tranquil and eloquent Park Güell.</p>
@@ -29,10 +29,10 @@
 
             <h3>Photo Gallery</h3>
 
-            <img src="/images/park_guell.jpeg" alt="View from bench seating above park" width="200">
+            <img src="./images/park_guell.jpeg" alt="View from bench seating above park" width="200">
             <p>The view from the world famous Park Güell</p>
 
-            <img src="/images/camp_nou.jpeg" alt="View of an FC Barcelona match from the Camp Nou" width="200">
+            <img src="/images/camp-nou.jpeg" alt="View of an FC Barcelona match from the Camp Nou" width="200">
             <p>Barcelona fans demonstrate their passion from the Camp Nou</p>
 
             <img src="/images/beach_barcelona.jpeg" alt="Beach on the northeastern coast of spain" width="200">
@@ -47,7 +47,8 @@
             <!-- Jean Gamboa Fuentes -->
 
         </div>
-
+        
+        <!-- Div for the other Cities -->
         <div></div>
         <div></div>
         <div></div>
