using relative paths

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
             <h3>Photo Gallery</h3>
 
-            <img src="./images/park_guell.jpeg" alt="View from bench seating above park" width="200">
+            <img src="images/park_guell.jpeg" alt="View from bench seating above park" width="200">
             <p>The view from the world famous Park Güell</p>
 
-            <img src="/images/camp-nou.jpeg" alt="View of an FC Barcelona match from the Camp Nou" width="200">
+            <img src="images/camp-nou.jpeg" alt="View of an FC Barcelona match from the Camp Nou" width="200">
             <p>Barcelona fans demonstrate their passion from the Camp Nou</p>
 
-            <img src="/images/beach_barcelona.jpeg" alt="Beach on the northeastern coast of spain" width="200">
+            <img src="images/beach_barcelona.jpeg" alt="Beach on the northeastern coast of spain" width="200">
             <p>View of a popular strip on Barcelona’s most famous beach</p>
 
-            <img src="/images/sagrada_familia.jpeg" alt="Image of famous basilica: La Sagrada Familia" width="200">
+            <img src="images/sagrada_familia.jpeg" alt="Image of famous basilica: La Sagrada Familia" width="200">
             <p>Stunning display of modern structure with vintage architecture at La Sagrada Familia</p>
 
-            <img src="/images/barcelona_skyline.jpeg" alt="Image of the night skyline in Barcelona" width="200">
+            <img src="images/barcelona_skyline.jpeg" alt="Image of the night skyline in Barcelona" width="200">
             <p>Nighttime view of the contrast between modern and classical Barcelona</p>
 
             <!-- Jean Gamboa Fuentes -->
