Added basic styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Travel</title>
 </head>
 <Header>
     <h1>Travel</h1>
+    
 </Header>
 
 <nav>
@@ -17,7 +20,7 @@
 
 <body>
     <main>
-        <div>
+        <div class="location">
             <h2>Barcelona, Spain</h2>
 
             <img src="images/barcelona.jpeg" width="400"
