--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </Header>
 
 <nav>
-    <a href="/pets.html/">pets</a>
-    <a href="/recipes.html/">recipes</a>
+    <a href="pets.html/">pets</a>
+    <a href="recipes.html/">recipes</a>
 </nav>
 
 <body>
