--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Travel</title>
 </head>
@@ -13,13 +13,20 @@
     
 </Header>
 
-<nav>
-    <a href="pets.html">pets</a>
-    <a href="recipes.html">recipes</a>
-</nav>
+
 
 <body>
-    <main>
+
+    <a href="#main" id="skipToMain">Skip to main content</a>
+    <nav>
+        <ul>
+            <li><a href="index.html">Travel</a></li>
+            <li><a href="pets.html">Pets</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+        </ul>
+    </nav>
+
+    <main id="main">
         <div class="location">
             <h2>Barcelona, Spain</h2>
 
@@ -28,6 +35,8 @@
 
             <p>Barcelona, is a beautiful city on the Northeastern coast of Spain that is the byproduct of a rich and artistic history with modern infrastructure. One of the main attractions of the city is its gorgeous architecture, often the work of world renowned architects such as Antoni Gaudi. Some of the most notable works are the modern Basilica of La Sagrada Familia, and the tranquil and eloquent Park Güell.</p>
 
+            <br>
+            
             <p>Much of Barcelona’s charm comes down to local culture, from diverse culinary offerings, to the sunny vacation-ridden atmosphere of the beaches, and even the symbolism of nationalism and independence that Barcelona residents display. The passion of the locals is unwavering, including in famous soccer matches by one of the sports greatest clubs: F.C. Barcelona, and in numerous local artistry events. It is no wonder why many travelers to Spain feel rejuvenated and fortunate enough to have experienced the city’s irresistibly strong culture and atmosphere.</p>
 
             <h3>Photo Gallery</h3>
