--- a/recipes.html
+++ b/recipes.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Recipes</h1>
+    <a href="">Skip to main content</a>
+    <nav>
+        <ul>
+            <li><a href="index.html">Travel</a></li>
+            <li><a href="pets.html">Pets</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
