Added some classmate info

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </nav>
 
     <main id="main">
+
         <div class="location">
             <h2>Barcelona, Spain</h2>
 
@@ -60,11 +61,31 @@
 
         </div>
         
-        <!-- Div for the other Cities -->
+        <!-- Location 2 -->
+        <div class="location">
+            <h1>Banff</h1>
+            <h2>Geographical location: North America</h2>
+            <img class src="images/banff.jpg" width = "400" alt = "Beautiful lake at Banff"/>
+            <img src="images/banff.gif" width = "400" alt = "GIF of a lake at Banff National Park"/>
+            <p>Banff is Canada’s first national park. The park spans 2,564 square miles. Here you can see the Rocky Mountain peaks and beautiful turquoise glacial lakes.</p>
+            <p>In addition to the magnificent nature of Banff, there are many things to explore in the downtown area. Banff Avenue and Bear Street have many stores to enjoy shopping. You can also learn of the natural and cultural history by visiting many museums and historical sites.</p>
+            <h3>Photo Gallery</h3>
+            <img class="thumbnail" src ="images/banff_lake_summer.jpg" width= "200" alt = "Lake at Banff in summer"/>
+            <img src ="images/banff_town.jpg" width = "200" alt = "Banff downtown"/>
+            <img src ="images/banff_winter.jpg" width = "200" alt = "Beautiful Banff in winter"/>
+            <img src ="images/moraine_lake_banff.jpg" width = "200" alt = "Moraine lake at Banff"/>
+            <img src ="images/canoeing_in_banff.jpg" width = "200" alt = "Canoeing in Banff"/>
+        </div>
+
+        <!-- Location 3 -->
         <div></div>
+
+        <!-- Location 4 -->
         <div></div>
-        <div></div>
+
+        <!-- Location 5 -->
         <div></div>
     </main>
+
 </body>
 </html>
