--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="main">
         <!-- Recipe 1 -->
         <div>
             <h2>Double Chocolate Cookies</h2>
